-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.1
-
None
-
eff7a5f38cd2814c57a8214dbd53bd6fd345023b
The displayed strings in the File Size column of a QTreeView with a QFileSysModel are not aligned with the text in the other columns of the same row. A vertical offset of several pixels seems to be applied.
I have seen this in other Qt-based applications as well, such as Kid3.
Platform: Windows 7.
- is duplicated by
-
QTBUG-27682 Non-native QFileDialog detail view does not align the size and date modified text
-
- Closed
-
-
QTBUG-59783 QFileSystemModel alignment in QTableView
-
- Closed
-
For Gerrit Dashboard: QTBUG-64098 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
214003,3 | QFileSystemModel: properly align file size column | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |